<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VHike</string>
    <string name="main_title">vHike</string>
    <string name="main_profile">Profile</string>
    <string name="main_history">History</string>
    <string name="main_drive">Drive</string>
    <string name="main_ride">Hitchhike/Plan Trip</string>
    <string name="main_searchingpassenger">Search</string>
    <string name="ride_destination">Destination</string>
    <string name="ride_promptDestination">Choose destination</string>

    <string-array name="array_cities">
        <item>Berlin</item>
        <item>München</item>
        <item>Stuttgart</item>
        <item>Vaihingen</item>
    </string-array>

    <string name="profile_recent_rides">Recent rides</string>
    <string name="profile_username">Username</string>
    <string name="profile_first_name">First name</string>
    <string name="profile_last_name">Last name</string>
    <string name="profile_email">Email</string>
    <string name="profile_mobile">Mobile</string>
    <string name="profile_car">Car</string>
    <string name="profile_description">Description</string>
    <string name="profile_pw">Password</string>
    <string name="profile_pw_confirm">Confirm password</string>
    <string name="available_seats">No. of seats</string>
    <string name="ride_promptSeats">Seats available/needed</string>

    <string-array name="array_numSeats">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string name="profile_save">Save changes</string>
    <string name="driverView_endTrip">End trip</string>
    <string name="passengerContentDesc">Invitations from drivers</string>
    <string name="driverContentDesc">Passengers within perimeter</string>
    <string name="perimeter">Perimeter: </string>
    <string name="profile_anonymous">Anonymous</string>
    <string name="settings_perimeter_description">Search for hitchhikers within defined perimeter (km)</string>
    <string name="settings_unanimous_description">Hide profile information to others</string>
    <string name="perimeter_default">10</string>
    <string name="default_rating">0.0</string>
    <string name="autologin">Auto-Login</string>
    <string name="login_username">Username</string>
    <string name="login_pw">Password </string>
    <string name="login_login">Login</string>
    <string name="login_register">Register</string>
    <string name="driverView_updateData">Change trip info</string>
    <string name="dialog_apply">Apply</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="history_driver">Driver -History</string>
    <string name="history_passenger">Passenger -History</string>
    <string name="history_title_menu">History</string>
    <string name="history_instruction">Please choose your role as you were traveling.</string>
    <string name="history_title_driver">History - Driver</string>
    <string name="history_title_passenger">History - Passenger</string>
    <string name="checkOffers">Check 4 offers</string>
    <string name="gpsPrefs_title">GPS Preferences</string>
    <string name="gpsPrefs_summary">Location precision (higher precision gives shorter battery life)</string>
    <string name="compass_title">Compass</string>
    <string name="compass_summary">Whether to display orientation compass</string>
    <string name="destination_contentDesc">Add destination</string>
    <string name="ride_date">Date</string>
    <string name="dialog_next">Next</string>
    <string name="dialog_back">Back</string>
    <string name="pick_up">Pick Up</string>
    <string name="unknown">Unknown</string>
    <string name="description">Description</string>
    <string name="default_OK">OK</string>
    <string name="wait4PickUp">Please wait for your driver to pick you up&#8230;</string>
    <string name="rateProfile">Send rating?</string>
    <string name="default_CANCEL">Cancel</string>
    <string name="default_remove">Remove destination</string>
    <string name="default_new">New destination</string>
    <string name="main_trips">My Trips</string>
    <string name="main_messages">My Messages</string>
    <string name="main_logout">Log out</string>
    <string name="dialog_now">Now</string>
    <string name="dialog_choose_date">Choose date&#8230;</string>
    <string name="dialog_pick_date_and_time">Pick date and time</string>
    <string name="date_in_past">vHike cannot create a new trip in the past unless you, Sir, have a time machine</string>
    <string name="date_get_error">Error in getting the date. Please try again!</string>
    <string name="destination_max_reached">Really? More destinations than available options to choose from?</string>
    <string name="default_yes">Yes</string>
    <string name="default_no">No</string>
    <string name="confirm_end_trip">You already have an open trip. Do you want to end this and start a new one?</string>
    <string name="error_unknown">Unknown Error</string>
    <string name="error_announcing_trip">vHike cannot announce your trip</string>
    <string name="confirm_end_trip_title">End an open trip</string>
    <string name="logging_in">logging in&#8230;</string>
    <string name="plan_enable_sf">Service Location is not enabled. Do you want to enable Service Feature?</string>
    <string name="open_pmp">Open PMP</string>
    <string name="close_map">Return to planning menu</string>
    <string name="login_bluetooth">Bluetooth</string>
    
    <string name="ride_departure">Departure</string>
    <string name="bluetooth_sendmsg">Send</string>
    <string name="bluetooth_ride">Ride</string>
    
    <string name="ride_promptDeparture">Choose your departure</string>
    <string name="passengers">passengers</string>
    <string name="invites">invites</string>
    <string name="messages">messages</string>
    <string name="login_remember">Remember</string>
    <string name="tripDetails_overview">Overview</string>
    <string name="tripDetails_all_messages">All messages</string>
    <string name="tripDetails_stopovers">&quot;Stopovers &quot;</string>
    <string name="tripDetails_my_trip">My trip</string>
    <string name="tripDetails_passengers">"Passengers "</string>
    <string name="tripDetails_new_messages">New messages</string>
    <string name="tripDetails_cancel_trip">Cancel trip</string>
    <string name="tripDetails_edit_trip">Edit trip</string>
    <string name="message_title">Message</string>
    <string name="send">Send</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="message_decline_title">"Decline %s"</string>
    <string name="message_accept_title">"Accept %s"</string>
    <string name="message_new_offer">"New %s"</string>
    <string name="message_decline_confirm">"Do you really want to decline this %s?"</string>
    <string name="message_accept_confirm">"Do you really want to accept this %s?"</string>
    <string name="request">request</string>
    <string name="invitation">invitation</string>
    <string name="tripDetails_new_trip">New trip</string>
    <string name="my_trips">My trips</string>
    <string name="tripDetails_search">Search for %s</string>
    <string name="free_seats">Free seats</string>
    <string name="requests">requests</string>
    <string name="Departure">Departure</string>
    <string name="Destination">Destination</string>
    <string name="day">day</string>
    <string name="Tolerance">Tolerance</string>
    <string name="Date">Date</string>
    <string name="Username">Username</string>
    <string name="Min_rating">Min rating</string>
    <string name="Filter_result">Filter result</string>
    <string name="Search">Search</string>
    <string name="Show_live_trips">Show live %s on map</string>
    <string name="Available_seats">Available seats</string>
    <string name="Over">Over</string>
    <string name="Today">Today</string>
    <string name="now">Now</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="Trip_search_title">% search</string>
    <string name="My_searches">My searches</string>
    <string name="NoNewMessages">- no new messages -</string>
    <string name="Current_position">Current position...</string>
    <string name="start_trip">Start trip</string>

</resources>