<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp" >

    <include layout="@layout/view_divider_coloured" >
    </include>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/ride_destination"
            android:textColor="@color/dark_blue"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/update_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/ride_promptDestination" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/available_seats"
            android:textColor="@color/dark_blue"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/update_spinner_numSeats"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/ride_promptSeats" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:gravity="right"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dialog_update_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_apply" />

        <Button
            android:id="@+id/dialog_update_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_cancel" />
    </LinearLayout>

    <include layout="@layout/view_divider_coloured" >
    </include>

</LinearLayout>