<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pmp="http://schemas.android.com/res/de.unistuttgart.ipvs.pmp"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_blur"
    android:orientation="vertical" >

    <de.unistuttgart.ipvs.pmp.gui.view.BasicTitleView
        pmp:name="@string/main_trips"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:icon="@drawable/logo_rd"
        pmp:textColor="@color/dark_blue" >
    </de.unistuttgart.ipvs.pmp.gui.view.BasicTitleView>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perimeter"
                android:textColor="@color/dark_blue"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="264dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_perimeter_description"
                android:textColor="@color/dark_blue"
                android:textSize="15dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_perimeter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:inputType="number"
            android:numeric="integer"
            android:text="@string/perimeter_default" />
    </RelativeLayout>

    <include layout="@layout/view_divider_coloured" >
    </include>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_anonymous"
                android:textColor="@color/dark_blue"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_unanimous_description"
                android:textColor="@color/dark_blue"
                android:textSize="15dp" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_unanimous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="" />
    </RelativeLayout>

</LinearLayout>