<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="wrap_content"
    android:layout_height="130dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/tv_rate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/plan_enable_sf"
        android:textColor="@color/dark_blue" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_rate"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_cancel_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/default_CANCEL" />

        <Button
            android:id="@+id/btn_open_pmp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/open_pmp" />
    </LinearLayout>

</RelativeLayout>